Bug 472768 - Launching Elisa from a Task Manager pin or Application Launcher, when it is already minimized to the system tray, does not bring the main window to the foreground
Summary: Launching Elisa from a Task Manager pin or Application Launcher, when it is a...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
: 459974 499292 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-07-29 10:00 UTC by Finn Rayment
Modified: 2025-02-09 20:21 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.0
Sentry Crash Report:


Attachments
Reproduction of the bug (2.63 MB, video/x-matroska)
2023-07-29 10:00 UTC, Finn Rayment
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Finn Rayment 2023-07-29 10:00:58 UTC
Created attachment 160599 [details]
Reproduction of the bug

SUMMARY
When minimising Elisa to the system tray, clicking the app icon in the taskbar opens a new session. This new session sometimes hangs with the loading gear animation.

STEPS TO REPRODUCE
1. Open Elisa
2. Configure Elisa > Tick box for 'Keep running in System Tray when main window is closed' > Apply
3. Minimise Elisa
4. Open Elisa from krunner, from application launcher, from taskbar, etc.

OBSERVED RESULT
A new instance of Elisa opens, sometimes with spinning gears forever, until the system tray minimised instance is closed.
This also causes other odd behaviour, such as Ctrl+Q (Quit), which minimises the second instance rather than quitting it, or locks up the program entirely.

EXPECTED RESULT
The system tray minimised instance should maximise. There should only be max of one running instance of Elisa at any given moment.

SOFTWARE/OS VERSIONS
uname: Linux laptop 6.1.41-gentoo-x86_64 #1 SMP PREEMPT_DYNAMIC Tue Jul 25 21:57:22 AEST 2023 x86_64 AMD Ryzen 7 PRO 5850U with Radeon Graphics AuthenticAMD GNU/Linux
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Graphics Platform: X11

ADDITIONAL INFORMATION
Gentoo USE flags for Elisa: handbook vlc -debug -mpris -semantic-desktop -test
Comment 1 John Kizer 2025-02-05 20:06:07 UTC
*** Bug 459974 has been marked as a duplicate of this bug. ***
Comment 2 John Kizer 2025-02-05 20:06:39 UTC
*** Bug 499292 has been marked as a duplicate of this bug. ***
Comment 3 Alex 2025-02-06 10:25:22 UTC
Hi, nothing changed in the last 2 years since this bug was reported ?
Comment 4 John Kizer 2025-02-06 17:37:13 UTC
(In reply to Alex from comment #3)
> Hi, nothing changed in the last 2 years since this bug was reported ?

As a mostly volunteer project, development progress for KDE applications requires (among other things) folks with the time, ability, and interest to contribute code that implement features and bug fixes. It would seem this bug is still in need of such a contribution - if you or someone you know of can help, the Community Wiki guide for getting start with KDE development is here: https://community.kde.org/Get_Involved/development
Comment 5 Bug Janitor Service 2025-02-08 06:43:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/666
Comment 6 Bug Janitor Service 2025-02-08 06:43:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/666
Comment 7 Pedro Nishiyama 2025-02-08 19:23:17 UTC
Git commit 6a51e1b17f0a6f028caeb53853261e11021b2d0c by Pedro Nishiyama.
Committed on 08/02/2025 at 16:56.
Pushed by jackh into branch 'master'.

Restore the minimized Elisa instance when opened again

M  +1    -0    src/elisaapplication.cpp
M  +2    -0    src/elisaapplication.h
M  +4    -0    src/qml/PlatformIntegration.qml

https://invent.kde.org/multimedia/elisa/-/commit/6a51e1b17f0a6f028caeb53853261e11021b2d0c
Comment 8 Alex 2025-02-09 11:19:34 UTC
Thank you Pedro for fixing this bug ! <3
Do you have any idea when the next update (that includes this fix) will be released ?
Comment 9 John Kizer 2025-02-09 18:12:54 UTC
The "Version Fixed In" field up at the top of bug page will typically contain the version planned to be released with the relevant code changes for a particular bug. KDE Gear follows a YY.MM major version number style, so the currently planned version 25.04.0 would be planned for an April 2025 release.
Comment 10 Alex 2025-02-09 20:21:54 UTC
Okay, thanks ! :)