Restore the minimized Elisa instance when opened again

BUG: 472768